# bd-track

./: .gitignore  CHANGELOG.md  LICENSE  README.md  install.sh  manifest  pyproject.toml
.beads/: .gitignore  config.yaml  issues.jsonl  metadata.json  queue.yaml
docs/dev/: checkpoint-2026-06-03-cli-cutover.md  timetracking-architecture.06022026.md
src/bd_timew/: __init__.py  __main__.py  aggregate.py  billing.py  cli.py  project.py  queue.py  server.py  session.py  timew.py  util.py
src/bd_timew/templates/: __init__.py
src/bd_timew/templates/envrc/: dolt-server.envrc.tmpl
src/bd_timew/templates/sidecar/: bd-timew.yaml.tmpl
src/bd_timew/templates/systemd/: bd-timew-cleanup.service.tmpl  bd-timew-cleanup.timer.tmpl  bd-timew-idle-stop.service.tmpl  bd-timew-idle-stop.timer.tmpl
src/bd_track/: __init__.py  __main__.py  aggregate.py  billing.py  cli.py  events.py  migrate.py  project.py  queue.py  server.py  session.py  track.py  util.py
src/bd_track/templates/: __init__.py
src/bd_track/templates/envrc/: dolt-server.envrc.tmpl
src/bd_track/templates/sidecar/: bd-track.yaml.tmpl
src/bd_track/templates/systemd/: bd-track-cleanup.service.tmpl  bd-track-cleanup.timer.tmpl  bd-track-idle-stop.service.tmpl  bd-track-idle-stop.timer.tmpl
tests/: test_aggregate.py  test_billing.py  test_events.py  test_migrate.py  test_project_helpers.py  test_queue.py  test_session.py  test_templates.py  test_timew.py  test_track.py
