[project]
name = "bd-timew"
version = "0.1.0"
description = "Beads + Timewarrior bridge with project lifecycle management and scoped execution queues"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Michael Haynes" }]
keywords = ["beads", "timewarrior", "time-tracking", "billing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Utilities",
]
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",
    "rich-argparse>=1.4",
    "expandvars>=0.12",
]

[project.scripts]
bd-timew = "bd_timew.cli:main"

[project.urls]
Homepage = "https://github.com/AudensAurantius/bd-timew"
Repository = "https://github.com/AudensAurantius/bd-timew"
Issues = "https://github.com/AudensAurantius/bd-timew/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[build-system]
requires = ["uv_build>=0.7"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "bd_timew"
module-root = "src"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
