[project]
name = "bd-track"
version = "0.5.0"
description = "Beads + Timewarrior bridge with project lifecycle management and scoped execution queues"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Michael Haynes" }]
keywords = ["beads", "timewarrior", "time-tracking", "billing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Utilities",
]
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",
    "rich-argparse>=1.4",
    "expandvars>=0.12",
    "xkcdpass>=1.19",
    "python-ulid>=2.0",
    "typing_extensions>=4.0",  # python-ulid imports it unconditionally on 3.13
    "dateparser>=1.1",
]

[project.scripts]
bd-track = "bd_track.cli:main"
# Deprecated alias — prints a stderr warning, then dispatches to the same CLI.
# Keeps existing /start /stop wrappers + .envrc-driven callers working through
# the bd-timew → bd-track transition. Remove in a later release.
bd-timew = "bd_track.cli:main_deprecated"

# NOTE: the GitHub repo is still named 'bd-timew'; these URLs track the real
# remote. Update if/when the repo is renamed to bd-track.
[project.urls]
Homepage = "https://github.com/AudensAurantius/bd-timew"
Repository = "https://github.com/AudensAurantius/bd-timew"
Issues = "https://github.com/AudensAurantius/bd-timew/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[build-system]
requires = ["uv_build>=0.7"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "bd_track"
module-root = "src"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
